[package]
name = "kafka-lag-monitor"
version = "0.1.0"
edition = "2024"
authors = ["hudengjin <hdengjin@gmail.com>"]
description = "Kafka consumer lag monitoring tool"
license = "MIT"
repository = "https://github.com/hudengjin/kafka-lag-monitor"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
config = "0.15.8"
rdkafka = { version = "0.36.2", features = ["ssl", "sasl"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
